# shepherd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
examples/guess-empty-n/: README.md  generate_models.py
examples/iterated-majority/: README.md  generate_models.py  run_benchmarks.py
latex/: examples.tex
src/: cli.rs  downset.rs  ideal.rs  iterative.rs  main.rs  nfa.rs  semigroup.rs  sheep.rs  solver.rs  strategy.rs
tests/: integration_test.rs
