[package]
name = "shepherd"
version = "0.1.0"
edition = "2021"
default-run = "shepherd"

[dependencies]
env_logger = "0.11.8"
regex = "1"
clap = { version = "4.5.35", features = ["derive"] }
tera = "1.19"
dot-parser = "0.5.1"
cached = "0.55.1"
once_cell = "1.21.3"
rayon = "1.10.0"
itertools = "0.14.0"

[profile.release]
#strip = true # Supprime les symboles de débogage
#lto = true   # Optimisation inter-procédurale (Link-Time Optimization)

#profile mode
#debug = true

[[bin]]
name = "schaeppert"
path = "src/iterative.rs"

[dependencies.log]
version = "0.4.27"
features = ["release_max_level_info"]
